--- a/navigator/index.html
+++ b/navigator/index.html
@@ -2,47 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Privileged app</title>
+        <title>Title</title>
         <meta name="description" content="A privileged app stub">
-
-        <!--
-          viewport allows you to control how mobile browsers will render your content.
-          width=device-width tells mobile browsers to render your content across the
-          full width of the screen, without being zoomed out (by default it would render
-          it at a desktop width, then shrink it to fit.)
-          Read more about it here:
-          https://developer.mozilla.org/Mozilla/Mobile/Viewport_meta_tag
-        -->
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/app.css">
-
-        <!--
-        Inline JavaScript code is not allowed for privileged and certified apps,
-        due to Content Security Policy restrictions.
-        You can read more about it here: https://developer.mozilla.org/Apps/CSP
-        Plus keeping your JavaScript separated from your HTML is always a good practice!
-
-        We're also using the 'defer' attribute. This allows us to tell the browser that
-        it should not wait for this file to load before continuing to load the rest of
-        resources in the page. Then, once everything has been loaded, it will parse and
-        execute the deferred files.
-        Read about defer: https://developer.mozilla.org/Web/HTML/Element/script#attr-defer
-        -->
+		<link rel="stylesheet" href="css/bootstrap.min.css">
         <script type="text/javascript" src="js/app.js" defer></script>
-
-        <!--
-        The following two lines are for loading the localisations library
-        and the localisation data-so people can use the app in their
-        own language (as long as you provide translations).
-        -->
+		<script type="text/javascript" src="js/bootstrap.min.js" defer></script>
         <link rel="prefetch" type="application/l10n" href="data/locales.ini" />
         <script type="text/javascript" src="js/libs/l10n.js" defer></script>
     </head>
     <body>
-        <section>
-            <h1 data-l10n-id="app_title">Privileged empty app</h1>
-            <p data-l10n-id="app_description">This app is empty. Fill it with your own stuff!</p>
-            <p id="message"></p>
-        </section>
+		<div class="container" >
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					Title
+				</div>
+			</div>
+			<div class="row">
+				<form>
+					<div class="form-group">
+						<label for="username" id="user_label">Username</label>
+						<input type="email" class="form-control" id="username" placeholder="Please enter a username">
+					</div>
+					<div class="form-group">
+						<label for="password" id="password_label">Password</label>
+						<input type="password" class="form-control" id="password" placeholder="Please enter a password">
+					</div>
+					<button type="submit" class="btn btn-default btn-sm">Submit</button>
+				</form>
+			</div>
+		</div>
     </body>
 </html>
