Fixed the cloth donation logging issue

--- a/navigator/choices.html
+++ b/navigator/choices.html
@@ -72,8 +72,8 @@
                             </p>
                         </div>
                         <div class="row">
-                            <label>Type of clothing</label>
-                            <select id="clothOption" name="clothOption" class="browser-default">
+                            <label for="clothType" >Type of clothing</label>
+                            <select id="clothType" name="clothType" class="browser-default">
                               <option value="" disabled selected>Choose your option</option>
                               <option value="1">Headwear</option>
                               <option value="2">Upperwear</option>
@@ -88,8 +88,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <label>Size</label>
-                            <select name="size" class="browser-default">
+                            <label for="size">Size</label>
+                            <select id="size" name="size" class="browser-default">
                               <option value="" disabled selected>Choose your option</option>
                               <option value="1">Small</option>
                               <option value="2">Medium</option>
